Run benchmark at august 2021

--- a/FCA_python_packages/Performance_Benchmark.ipynb
+++ b/FCA_python_packages/Performance_Benchmark.ipynb
@@ -4,20 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style>.container { width:90% !important; }</style>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from IPython.core.display import display, HTML\n",
     "display(HTML(\"<style>.container { width:90% !important; }</style>\"))"
@@ -423,11 +410,11 @@
      "output_type": "stream",
      "text": [
       "animal_movement\n",
-      "Lattice constructed in 0.001663 seconds\n",
-      "Executed in 0.058675 seconds\n",
+      "Lattice constructed in 0.001077 seconds\n",
+      "Executed in 0.119257 seconds\n",
       "tealady\n",
-      "Lattice constructed in 0.006811 seconds\n",
-      "Executed in 0.056226 seconds\n"
+      "Lattice constructed in 0.004998 seconds\n",
+      "Executed in 0.057589 seconds\n"
      ]
     }
    ],
@@ -474,15 +461,15 @@
      "output_type": "stream",
      "text": [
       "animal_movement\n",
-      "Lattice constructed in 0.041466 seconds\n",
-      "Visualizer constructed in 0.042298 seconds\n",
-      "Png saved in 0.245663 seconds\n",
-      "Executed in 3.016535 seconds\n",
+      "Lattice constructed in 0.051641 seconds\n",
+      "Visualizer constructed in 0.052484 seconds\n",
+      "Png saved in 0.437595 seconds\n",
+      "Executed in 4.703884 seconds\n",
       "tealady\n",
-      "Lattice constructed in 0.013088 seconds\n",
-      "Visualizer constructed in 0.015431 seconds\n",
-      "Png saved in 0.86057 seconds\n",
-      "Executed in 1.020402 seconds\n"
+      "Lattice constructed in 0.012901 seconds\n",
+      "Visualizer constructed in 0.015452 seconds\n",
+      "Png saved in 1.080044 seconds\n",
+      "Executed in 1.307488 seconds\n"
      ]
     }
    ],
@@ -775,7 +762,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "33f8a4a98fde4692859f56f990ec54a1",
+       "model_id": "47d541f738404938a3a56aa586c3f991",
        "version_major": 2,
        "version_minor": 0
       },
@@ -791,8 +778,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "CPU times: user 26.2 s, sys: 10.5 s, total: 36.7 s\n",
-      "Wall time: 15h 4min 37s\n"
+      "CPU times: user 27.4 s, sys: 11 s, total: 38.4 s\n",
+      "Wall time: 15h 5min\n"
      ]
     }
    ],
@@ -889,8 +876,8 @@
        "      <td>random_10_10_0.1</td>\n",
        "      <td>concepts</td>\n",
        "      <td>True</td>\n",
-       "      <td>0.000661</td>\n",
-       "      <td>0.000006</td>\n",
+       "      <td>0.000770</td>\n",
+       "      <td>0.000005</td>\n",
        "      <td>0.000005</td>\n",
        "      <td>300.0</td>\n",
        "      <td>10.0</td>\n",
@@ -905,8 +892,8 @@
        "      <td>random_10_10_0.1</td>\n",
        "      <td>fcapy</td>\n",
        "      <td>True</td>\n",
-       "      <td>0.001700</td>\n",
-       "      <td>0.000005</td>\n",
+       "      <td>0.001946</td>\n",
+       "      <td>0.000004</td>\n",
        "      <td>0.000006</td>\n",
        "      <td>300.0</td>\n",
        "      <td>10.0</td>\n",
@@ -921,9 +908,9 @@
        "      <td>random_10_10_0.1</td>\n",
        "      <td>fcapsy</td>\n",
        "      <td>True</td>\n",
-       "      <td>0.000537</td>\n",
-       "      <td>0.000006</td>\n",
-       "      <td>0.000004</td>\n",
+       "      <td>0.001004</td>\n",
+       "      <td>0.000005</td>\n",
+       "      <td>0.000007</td>\n",
        "      <td>300.0</td>\n",
        "      <td>10.0</td>\n",
        "      <td>10.0</td>\n",
@@ -937,8 +924,8 @@
        "      <td>animal_movement</td>\n",
        "      <td>concepts</td>\n",
        "      <td>True</td>\n",
-       "      <td>0.000837</td>\n",
-       "      <td>0.000006</td>\n",
+       "      <td>0.000855</td>\n",
+       "      <td>0.000009</td>\n",
        "      <td>0.000004</td>\n",
        "      <td>300.0</td>\n",
        "      <td>16.0</td>\n",
@@ -953,9 +940,9 @@
        "      <td>animal_movement</td>\n",
        "      <td>fcapy</td>\n",
        "      <td>True</td>\n",
-       "      <td>0.002259</td>\n",
-       "      <td>0.000005</td>\n",
-       "      <td>0.000007</td>\n",
+       "      <td>0.002165</td>\n",
+       "      <td>0.000006</td>\n",
+       "      <td>0.000009</td>\n",
        "      <td>300.0</td>\n",
        "      <td>16.0</td>\n",
        "      <td>4.0</td>\n",
@@ -976,11 +963,11 @@
        "4           0   animal_movement     fcapy         True   \n",
        "\n",
        "   lattice_construction_time (secs)  intent_time (secs)  extent_time (secs)  \\\n",
-       "0                          0.000661            0.000006            0.000005   \n",
-       "1                          0.001700            0.000005            0.000006   \n",
-       "2                          0.000537            0.000006            0.000004   \n",
-       "3                          0.000837            0.000006            0.000004   \n",
-       "4                          0.002259            0.000005            0.000007   \n",
+       "0                          0.000770            0.000005            0.000005   \n",
+       "1                          0.001946            0.000004            0.000006   \n",
+       "2                          0.001004            0.000005            0.000007   \n",
+       "3                          0.000855            0.000009            0.000004   \n",
+       "4                          0.002165            0.000006            0.000009   \n",
        "\n",
        "   timeout_seconds  n_objects  n_attributes  n_connections  density  is_random  \n",
        "0            300.0       10.0          10.0            9.0    0.090       True  \n",
