Run benchmark at 31 october 2021

--- a/FCA_python_packages/Performance_Benchmark.ipynb
+++ b/FCA_python_packages/Performance_Benchmark.ipynb
@@ -4,7 +4,20 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>.container { width:90% !important; }</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from IPython.core.display import display, HTML\n",
     "display(HTML(\"<style>.container { width:90% !important; }</style>\"))"
@@ -407,11 +420,11 @@
      "output_type": "stream",
      "text": [
       "animal_movement\n",
-      "Lattice constructed in 0.001552 seconds\n",
-      "Executed in 0.041914 seconds\n",
+      "Lattice constructed in 0.001607 seconds\n",
+      "Executed in 0.038172 seconds\n",
       "tealady\n",
-      "Lattice constructed in 0.009563 seconds\n",
-      "Executed in 0.058486 seconds\n"
+      "Lattice constructed in 0.008677 seconds\n",
+      "Executed in 0.057887 seconds\n"
      ]
     }
    ],
@@ -458,13 +471,13 @@
      "output_type": "stream",
      "text": [
       "animal_movement\n",
-      "Lattice constructed in 0.001433 seconds\n",
-      "Visualizer constructed in 0.001603 seconds\n",
-      "Png saved in 0.2417 seconds\n",
+      "Lattice constructed in 0.001436 seconds\n",
+      "Visualizer constructed in 0.001597 seconds\n",
+      "Png saved in 0.20498 seconds\n",
       "tealady\n",
-      "Lattice constructed in 0.030366 seconds\n",
-      "Visualizer constructed in 0.03093 seconds\n",
-      "Png saved in 0.856946 seconds\n"
+      "Lattice constructed in 0.026354 seconds\n",
+      "Visualizer constructed in 0.026911 seconds\n",
+      "Png saved in 0.824149 seconds\n"
      ]
     }
    ],
@@ -769,7 +782,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "27d153b4017542688d0dfdea7fc4e62a",
+       "model_id": "0ab24be6c39d43fa86ad38a495f08674",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1522,6 +1535,49 @@
       "    sub_indexes = {i for i in range(len(self)) if self.leq_elements(i, element_index) and i != element_index}\n",
       "  File \"/home/egor/anaconda3/lib/python3.8/site-packages/fcapy/poset/poset.py\", line 263, in _leq_elements_cache\n",
       "    self._cache_leq[key] = res\n",
+      "MemoryError\n",
+      "Process test_lattice_fcapy:\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/egor/anaconda3/lib/python3.8/multiprocessing/process.py\", line 315, in _bootstrap\n",
+      "    self.run()\n",
+      "  File \"/home/egor/anaconda3/lib/python3.8/multiprocessing/process.py\", line 108, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"<ipython-input-19-1f3dd588288a>\", line 21, in test_lattice_time_by_lib_multiprocess\n",
+      "    L_time.value = test_lattice_time_by_lib(K, lib_name)\n",
+      "  File \"<ipython-input-19-1f3dd588288a>\", line 12, in test_lattice_time_by_lib\n",
+      "    L_time = test_lattice_time_by_func(K, lambda ctx: ConceptLattice.from_context(ctx))\n",
+      "  File \"<ipython-input-19-1f3dd588288a>\", line 3, in test_lattice_time_by_func\n",
+      "    L = L_func(K)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  File \"<ipython-input-19-1f3dd588288a>\", line 12, in <lambda>\n",
+      "    L_time = test_lattice_time_by_func(K, lambda ctx: ConceptLattice.from_context(ctx))\n",
+      "  File \"/home/egor/anaconda3/lib/python3.8/site-packages/fcapy/lattice/concept_lattice.py\", line 230, in from_context\n",
+      "    ltc = algo_func(context, **kwargs_used)\n",
+      "  File \"/home/egor/anaconda3/lib/python3.8/site-packages/fcapy/algorithms/concept_construction.py\", line 497, in lindig_algorithm\n",
+      "    lattice = ConceptLattice(concepts, subconcepts_dict=subconcepts_dict, superconcepts_dict=superconcepts_dict)\n",
+      "  File \"/home/egor/anaconda3/lib/python3.8/site-packages/fcapy/lattice/concept_lattice.py\", line 75, in __init__\n",
+      "    super(ConceptLattice, self).__init__(concepts, self.concepts_leq_func, use_cache=True)\n",
+      "  File \"/home/egor/anaconda3/lib/python3.8/site-packages/fcapy/poset/lattice.py\", line 27, in __init__\n",
+      "    super(UpperSemiLattice, self).__init__(elements, leq_func, use_cache, direct_subelements_dict)\n",
+      "  File \"/home/egor/anaconda3/lib/python3.8/site-packages/fcapy/poset/lattice.py\", line 105, in __init__\n",
+      "    bottom_elements = super(LowerSemiLattice, self).bottom_elements\n",
+      "  File \"/home/egor/anaconda3/lib/python3.8/site-packages/fcapy/poset/poset.py\", line 122, in bottom_elements\n",
+      "    return [el_i for el_i in range(len(self)) if len(self.sub_elements(el_i)) == 0]\n",
+      "  File \"/home/egor/anaconda3/lib/python3.8/site-packages/fcapy/poset/poset.py\", line 122, in <listcomp>\n",
+      "    return [el_i for el_i in range(len(self)) if len(self.sub_elements(el_i)) == 0]\n",
+      "  File \"/home/egor/anaconda3/lib/python3.8/site-packages/fcapy/poset/poset.py\", line 154, in _sub_elements_cache\n",
+      "    res = self._sub_elements_nocache(element_index)\n",
+      "  File \"/home/egor/anaconda3/lib/python3.8/site-packages/fcapy/poset/poset.py\", line 147, in _sub_elements_nocache\n",
+      "    sub_indexes = {i for i in range(len(self)) if self.leq_elements(i, element_index) and i != element_index}\n",
+      "  File \"/home/egor/anaconda3/lib/python3.8/site-packages/fcapy/poset/poset.py\", line 147, in <setcomp>\n",
+      "    sub_indexes = {i for i in range(len(self)) if self.leq_elements(i, element_index) and i != element_index}\n",
+      "  File \"/home/egor/anaconda3/lib/python3.8/site-packages/fcapy/poset/poset.py\", line 263, in _leq_elements_cache\n",
+      "    self._cache_leq[key] = res\n",
       "MemoryError\n"
      ]
     },
@@ -1530,8 +1586,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "CPU times: user 15.4 s, sys: 7.71 s, total: 23.1 s\n",
-      "Wall time: 13h 8min 14s\n"
+      "CPU times: user 15.6 s, sys: 7.28 s, total: 22.9 s\n",
+      "Wall time: 13h 8min 57s\n"
      ]
     }
    ],
@@ -1629,9 +1685,9 @@
        "      <td>random_10_10_0.1</td>\n",
        "      <td>concepts</td>\n",
        "      <td>True</td>\n",
-       "      <td>0.000717</td>\n",
+       "      <td>0.000661</td>\n",
+       "      <td>0.000006</td>\n",
        "      <td>0.000005</td>\n",
-       "      <td>0.000004</td>\n",
        "      <td>300.0</td>\n",
        "      <td>10.0</td>\n",
        "      <td>10.0</td>\n",
@@ -1645,7 +1701,7 @@
        "      <td>random_10_10_0.1</td>\n",
        "      <td>fcapy</td>\n",
        "      <td>True</td>\n",
-       "      <td>0.002149</td>\n",
+       "      <td>0.001967</td>\n",
        "      <td>0.000004</td>\n",
        "      <td>0.000006</td>\n",
        "      <td>300.0</td>\n",
@@ -1661,7 +1717,7 @@
        "      <td>animal_movement</td>\n",
        "      <td>concepts</td>\n",
        "      <td>True</td>\n",
-       "      <td>0.000831</td>\n",
+       "      <td>0.000790</td>\n",
        "      <td>0.000005</td>\n",
        "      <td>0.000004</td>\n",
        "      <td>300.0</td>\n",
@@ -1677,8 +1733,8 @@
        "      <td>animal_movement</td>\n",
        "      <td>fcapy</td>\n",
        "      <td>True</td>\n",
-       "      <td>0.001956</td>\n",
-       "      <td>0.000004</td>\n",
+       "      <td>0.001883</td>\n",
+       "      <td>0.000005</td>\n",
        "      <td>0.000007</td>\n",
        "      <td>300.0</td>\n",
        "      <td>16.0</td>\n",
@@ -1693,7 +1749,7 @@
        "      <td>gewaesser</td>\n",
        "      <td>concepts</td>\n",
        "      <td>True</td>\n",
-       "      <td>0.001335</td>\n",
+       "      <td>0.001227</td>\n",
        "      <td>0.000005</td>\n",
        "      <td>0.000004</td>\n",
        "      <td>300.0</td>\n",
@@ -1716,11 +1772,11 @@
        "4           0         gewaesser  concepts         True   \n",
        "\n",
        "   lattice_construction_time (secs)  intent_time (secs)  extent_time (secs)  \\\n",
-       "0                          0.000717            0.000005            0.000004   \n",
-       "1                          0.002149            0.000004            0.000006   \n",
-       "2                          0.000831            0.000005            0.000004   \n",
-       "3                          0.001956            0.000004            0.000007   \n",
-       "4                          0.001335            0.000005            0.000004   \n",
+       "0                          0.000661            0.000006            0.000005   \n",
+       "1                          0.001967            0.000004            0.000006   \n",
+       "2                          0.000790            0.000005            0.000004   \n",
+       "3                          0.001883            0.000005            0.000007   \n",
+       "4                          0.001227            0.000005            0.000004   \n",
        "\n",
        "   timeout_seconds  n_objects  n_attributes  n_connections  density  is_random  \n",
        "0            300.0       10.0          10.0            9.0    0.090       True  \n",
