Move classic contexts load into .py file

--- a/FCA_python_packages/Performance_Benchmark.ipynb
+++ b/FCA_python_packages/Performance_Benchmark.ipynb
@@ -24,6 +24,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import performance_benchmark as pbench"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -52,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,24 +144,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "frames_classic = {}\n",
-    "contexts_to_test = ['animal_movement', 'digits', 'gewaesser',\n",
-    "                    'lattice', 'liveinwater', 'tealady']\n",
-    "\n",
-    "!rm -rf tmp\n",
-    "!mkdir tmp\n",
-    "\n",
-    "for K_name in contexts_to_test:\n",
-    "    fname = f'tmp/{K_name}.cxt'\n",
-    "    !wget -O {fname} -q https://raw.githubusercontent.com/EgorDudyrev/FCApy/main/data/{K_name}.cxt\n",
-    "    df = FormalContext.read_cxt(fname).to_pandas()\n",
-    "    df.name = K_name\n",
-    "    frames_classic[K_name] = df\n",
-    "!rm -rf tmp"
+    "contexts_to_test = ['animal_movement', 'digits', 'gewaesser','lattice', 'liveinwater', 'tealady']\n",
+    "frames_classic = pbench.load_classic_context(['animal_movement', 'digits'])"
    ]
   },
   {
@@ -1988,7 +1985,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
