Run benchmark almost till the very end

--- a/FCA_python_packages/Performance_Benchmark.ipynb
+++ b/FCA_python_packages/Performance_Benchmark.ipynb
@@ -2,9 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>.container { width:90% !important; }</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from IPython.core.display import display, HTML\n",
     "display(HTML(\"<style>.container { width:90% !important; }</style>\"))"
@@ -12,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,18 +67,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from fcapy import LIB_INSTALLED\n",
-    "from fcapy.context import FormalContext\n",
-    "from fcapy.lattice import ConceptLattice\n",
-    "from fcapy.visualizer import ConceptLatticeVisualizer"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -77,15 +78,6 @@
    "metadata": {},
    "source": [
     "!pip -q install -U concepts --user"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import concepts"
    ]
   },
   {
@@ -105,13 +97,6 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "import fcapsy"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -127,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,18 +215,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "from datetime import datetime"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "animal_movement\n",
+      "Lattice constructed in 0.001369 seconds\n",
+      "Executed in 0.043852 seconds\n",
+      "tealady\n",
+      "Lattice constructed in 0.006612 seconds\n",
+      "Executed in 0.05267 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "pbench.visualize_by_concepts(K_names, frames, \"imgs/lattice_visualization/concepts\")"
    ]
@@ -255,9 +244,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "animal_movement\n",
+      "Lattice constructed in 0.001838 seconds\n",
+      "Visualizer constructed in 0.002062 seconds\n",
+      "Png saved in 0.1977 seconds\n",
+      "tealady\n",
+      "Lattice constructed in 0.027946 seconds\n",
+      "Visualizer constructed in 0.028471 seconds\n",
+      "Png saved in 0.834006 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "pbench.visualize_by_fcapy(K_names, frames, \"imgs/lattice_visualization/fcapy\")"
    ]
@@ -278,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,20 +301,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "680"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "ctx_names_vals = frames_order[:3]\n",
+    "ctx_names_vals = frames_order\n",
     "lib_names_vals = ['concepts', 'fcapy']#, 'fcapsy']\n",
     "n_runs*len(ctx_names_vals)*len(lib_names_vals)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
     "%%time\n",
     "stats_df = pbench.compute_stats(ctx_names_vals, lib_names_vals, n_runs, timeout_secs, frames)"
@@ -318,11 +331,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "stats_df.to_csv('benchmark_stats.csv')"
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stats_df = pd.read_csv('benchmark_stats_tmp.csv', index_col=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9882352941176471\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(stats_df['is_computed'].mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stats_df[stats_df['is_computed']].to_csv('benchmark_stats.csv')"
    ]
   },
   {
@@ -334,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,9 +391,165 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(672, 13)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>run_number</th>\n",
+       "      <th>ctx_name</th>\n",
+       "      <th>lib_name</th>\n",
+       "      <th>is_computed</th>\n",
+       "      <th>lattice_construction_time (secs)</th>\n",
+       "      <th>intent_time (secs)</th>\n",
+       "      <th>extent_time (secs)</th>\n",
+       "      <th>timeout_seconds</th>\n",
+       "      <th>n_objects</th>\n",
+       "      <th>n_attributes</th>\n",
+       "      <th>n_connections</th>\n",
+       "      <th>density</th>\n",
+       "      <th>is_random</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>random_10_10_0.1</td>\n",
+       "      <td>concepts</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.000682</td>\n",
+       "      <td>0.000005</td>\n",
+       "      <td>0.000005</td>\n",
+       "      <td>300.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0.090</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>random_10_10_0.1</td>\n",
+       "      <td>fcapy</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.002102</td>\n",
+       "      <td>0.000004</td>\n",
+       "      <td>0.000006</td>\n",
+       "      <td>300.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0.090</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>animal_movement</td>\n",
+       "      <td>concepts</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.002020</td>\n",
+       "      <td>0.000005</td>\n",
+       "      <td>0.000004</td>\n",
+       "      <td>300.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>0.375</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>animal_movement</td>\n",
+       "      <td>fcapy</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.001931</td>\n",
+       "      <td>0.000005</td>\n",
+       "      <td>0.000007</td>\n",
+       "      <td>300.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>0.375</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>gewaesser</td>\n",
+       "      <td>concepts</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.001259</td>\n",
+       "      <td>0.000004</td>\n",
+       "      <td>0.000004</td>\n",
+       "      <td>300.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>0.500</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   run_number          ctx_name  lib_name  is_computed  \\\n",
+       "0           0  random_10_10_0.1  concepts         True   \n",
+       "1           0  random_10_10_0.1     fcapy         True   \n",
+       "2           0   animal_movement  concepts         True   \n",
+       "3           0   animal_movement     fcapy         True   \n",
+       "4           0         gewaesser  concepts         True   \n",
+       "\n",
+       "   lattice_construction_time (secs)  intent_time (secs)  extent_time (secs)  \\\n",
+       "0                          0.000682            0.000005            0.000005   \n",
+       "1                          0.002102            0.000004            0.000006   \n",
+       "2                          0.002020            0.000005            0.000004   \n",
+       "3                          0.001931            0.000005            0.000007   \n",
+       "4                          0.001259            0.000004            0.000004   \n",
+       "\n",
+       "   timeout_seconds  n_objects  n_attributes  n_connections  density  is_random  \n",
+       "0            300.0       10.0          10.0            9.0    0.090       True  \n",
+       "1            300.0       10.0          10.0            9.0    0.090       True  \n",
+       "2            300.0       16.0           4.0           24.0    0.375      False  \n",
+       "3            300.0       16.0           4.0           24.0    0.375      False  \n",
+       "4            300.0        8.0           6.0           24.0    0.500      False  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "stats_df = pd.read_csv('benchmark_stats.csv', index_col=0)\n",
     "print(stats_df.shape)\n",
@@ -354,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +619,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
