Run benchmark at Jan2022

--- a/FCA_python_packages/Performance_Benchmark.ipynb
+++ b/FCA_python_packages/Performance_Benchmark.ipynb
@@ -210,11 +210,11 @@
      "output_type": "stream",
      "text": [
       "animal_movement\n",
-      "Lattice constructed in 0.000875 seconds\n",
-      "Executed in 0.037137 seconds\n",
+      "Lattice constructed in 0.001996 seconds\n",
+      "Executed in 0.043105 seconds\n",
       "tealady\n",
-      "Lattice constructed in 0.005095 seconds\n",
-      "Executed in 0.051548 seconds\n"
+      "Lattice constructed in 0.005018 seconds\n",
+      "Executed in 0.052391 seconds\n"
      ]
     }
    ],
@@ -239,13 +239,13 @@
      "output_type": "stream",
      "text": [
       "animal_movement\n",
-      "Lattice constructed in 0.00192 seconds\n",
-      "Visualizer constructed in 0.002196 seconds\n",
-      "Png saved in 0.208942 seconds\n",
+      "Lattice constructed in 0.001981 seconds\n",
+      "Visualizer constructed in 0.002413 seconds\n",
+      "Png saved in 0.217113 seconds\n",
       "tealady\n",
-      "Lattice constructed in 0.026601 seconds\n",
-      "Visualizer constructed in 0.027132 seconds\n",
-      "Png saved in 0.848156 seconds\n"
+      "Lattice constructed in 0.026382 seconds\n",
+      "Visualizer constructed in 0.026921 seconds\n",
+      "Png saved in 0.849851 seconds\n"
      ]
     }
    ],
@@ -316,7 +316,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5fd57dcc500c476fa5a02978dbbd9299",
+       "model_id": "4c40fdf3b218475c9a07f7d5d9d1ee1c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1121,8 +1121,8 @@
      "text": [
       "\n",
       "%done: 100.0%\n",
-      "CPU times: user 14.7 s, sys: 6.72 s, total: 21.4 s\n",
-      "Wall time: 13h 3min\n"
+      "CPU times: user 15.2 s, sys: 7.27 s, total: 22.4 s\n",
+      "Wall time: 13h 5min 12s\n"
      ]
     }
    ],
@@ -1212,8 +1212,8 @@
        "      <td>random_10_10_0.1</td>\n",
        "      <td>concepts</td>\n",
        "      <td>True</td>\n",
-       "      <td>0.000675</td>\n",
-       "      <td>0.000005</td>\n",
+       "      <td>0.000709</td>\n",
+       "      <td>0.000007</td>\n",
        "      <td>0.000004</td>\n",
        "      <td>300.0</td>\n",
        "      <td>10.0</td>\n",
@@ -1228,8 +1228,8 @@
        "      <td>random_10_10_0.1</td>\n",
        "      <td>fcapy</td>\n",
        "      <td>True</td>\n",
-       "      <td>0.001988</td>\n",
-       "      <td>0.000004</td>\n",
+       "      <td>0.002040</td>\n",
+       "      <td>0.000005</td>\n",
        "      <td>0.000006</td>\n",
        "      <td>300.0</td>\n",
        "      <td>10.0</td>\n",
@@ -1244,8 +1244,8 @@
        "      <td>animal_movement</td>\n",
        "      <td>concepts</td>\n",
        "      <td>True</td>\n",
-       "      <td>0.000823</td>\n",
-       "      <td>0.000005</td>\n",
+       "      <td>0.000834</td>\n",
+       "      <td>0.000006</td>\n",
        "      <td>0.000004</td>\n",
        "      <td>300.0</td>\n",
        "      <td>16.0</td>\n",
@@ -1260,7 +1260,7 @@
        "      <td>animal_movement</td>\n",
        "      <td>fcapy</td>\n",
        "      <td>True</td>\n",
-       "      <td>0.001924</td>\n",
+       "      <td>0.001937</td>\n",
        "      <td>0.000005</td>\n",
        "      <td>0.000007</td>\n",
        "      <td>300.0</td>\n",
@@ -1276,8 +1276,8 @@
        "      <td>gewaesser</td>\n",
        "      <td>concepts</td>\n",
        "      <td>True</td>\n",
-       "      <td>0.001276</td>\n",
-       "      <td>0.000004</td>\n",
+       "      <td>0.001312</td>\n",
+       "      <td>0.000006</td>\n",
        "      <td>0.000004</td>\n",
        "      <td>300.0</td>\n",
        "      <td>8.0</td>\n",
@@ -1299,11 +1299,11 @@
        "4           0         gewaesser  concepts         True   \n",
        "\n",
        "   lattice_construction_time (secs)  intent_time (secs)  extent_time (secs)  \\\n",
-       "0                          0.000675            0.000005            0.000004   \n",
-       "1                          0.001988            0.000004            0.000006   \n",
-       "2                          0.000823            0.000005            0.000004   \n",
-       "3                          0.001924            0.000005            0.000007   \n",
-       "4                          0.001276            0.000004            0.000004   \n",
+       "0                          0.000709            0.000007            0.000004   \n",
+       "1                          0.002040            0.000005            0.000006   \n",
+       "2                          0.000834            0.000006            0.000004   \n",
+       "3                          0.001937            0.000005            0.000007   \n",
+       "4                          0.001312            0.000006            0.000004   \n",
        "\n",
        "   timeout_seconds  n_objects  n_attributes  n_connections  density  is_random  \n",
        "0            300.0       10.0          10.0            9.0    0.090       True  \n",
